# gearex

./: .gitignore  .gitmodules  AGREEMENT.txt  BUILD.md  README.md  build  makefile  meson.build
.github/workflows/: meson.yaml
assets/shaders/: fragment.glsl
ext/: meson.build
include/: engine.hpp  input.hpp  misc.hpp  window.hpp
include/assets/: assets.hpp
include/engine/: input.hpp  misc.hpp  window.hpp
include/engine/assets/: assets.hpp  manager.hpp
include/engine/renderer/: command.hpp  geometry.hpp  mesh.hpp  renderer.hpp  vertex.hpp
include/renderer/: command.hpp  mesh.hpp  renderer.hpp  vertex.hpp
src/: main.cpp  meson.build
